# codemetrics

./: .clippy.toml  .codemetrics-baseline.sarif  .editorconfig  .gitignore  .pre-commit-config.yaml  .quality.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  ONBOARDING.md  PENDING-FIXES.md  PROJECT_STATUS.md  README.md  SECURITY.md  insert_solidity.py  rustfmt.toml  test.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: quality.yml  release.yml
.quality-history/: 2026-05.jsonl
crates/ast-parse/: Cargo.toml
crates/ast-parse-ts/: Cargo.toml
crates/ast-parse-ts/src/: lib.rs
crates/ast-parse/src/: lib.rs
crates/codemetrics-cli/: Cargo.toml
crates/codemetrics-cli/src/: batch.rs  cli.rs  config.rs  fix.rs  health.rs  history.rs  hooks.rs  ignore.rs  main.rs  output.rs  progress.rs  project.rs  setup.rs  types.rs  watch.rs
crates/codemetrics-cli/src/checks/: mod.rs
crates/codemetrics-cli/src/report/: mod.rs
crates/codemetrics-cli/tests/: schema_validation.rs
crates/codemetrics-common/: Cargo.toml
crates/codemetrics-common/src/: lib.rs
crates/codemetrics-server/: Cargo.toml
crates/codemetrics-server/src/: main.rs
crates/cohesion/: Cargo.toml
crates/cohesion/src/: main.rs
crates/comment-ratio/: Cargo.toml
crates/comment-ratio/src/: main.rs
crates/coupling/: Cargo.toml
crates/coupling/src/: main.rs
crates/coupling/tests/: fixtures_integration.rs  integration.rs
crates/coupling/tests/fixtures/src/: main.rs  parser.rs  utils.rs
crates/crap-metric/: Cargo.toml
crates/crap-metric/src/: main.rs
crates/crap-metric/tests/: integration.rs
crates/crypto-check/: Cargo.toml
crates/crypto-check/src/: main.rs
crates/dead-code/: Cargo.toml
crates/dead-code/src/: main.rs
crates/debt-scan/: Cargo.toml
crates/debt-scan/src/: main.rs
crates/debt-scan/tests/: integration.rs
crates/doc-coverage/: Cargo.toml
crates/doc-coverage/src/: main.rs
crates/doc-coverage/tests/: fixtures_integration.rs  integration.rs
crates/duplication/: Cargo.toml
crates/duplication/src/: main.rs
crates/duplication/tests/: fixtures_integration.rs  integration.rs
crates/error-handling/: Cargo.toml
crates/error-handling/src/: main.rs
crates/fixtures/: sample.c  sample.go  sample.java  sample.js  sample.py  sample.rs  sample.ts
crates/fuzz-surface/: Cargo.toml
crates/fuzz-surface/src/: main.rs
crates/halstead/: Cargo.toml
crates/halstead/src/: main.rs
crates/licenses/: Cargo.toml
crates/licenses/src/: main.rs
crates/line-length/: Cargo.toml
crates/line-length/src/: main.rs
crates/mutation-test/: Cargo.toml
crates/mutation-test/src/: delta.rs  main.rs
crates/mutation-test/tests/: integration.rs
crates/prop-cov/: Cargo.toml
crates/prop-cov/src/: main.rs
crates/prop-cov/tests/: fixtures_integration.rs
crates/quality-cli/: Cargo.toml
crates/quality-cli/src/: main.rs
crates/quality-common/: Cargo.toml
crates/quality-common/src/: lib.rs  memory.rs
crates/quality-server/: Cargo.toml
crates/quality-server/src/: main.rs
crates/risk-map/: Cargo.toml
crates/risk-map/src/: main.rs
crates/risk-map/tests/: integration.rs
crates/sast/: Cargo.toml
crates/sast/src/: main.rs
crates/sbom/: Cargo.toml
crates/sbom/src/: main.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: main.rs
crates/taint-scan/: Cargo.toml
crates/taint-scan/src/: main.rs
crates/taint-scan/tests/: fixtures_integration.rs
crates/taint-scan/tests/fixtures/: keyword_binding.rs  log_leak.rs  print_leak.rs  safe_bcrypt.rs
crates/type-coverage/: Cargo.toml
crates/type-coverage/src/: main.rs
crates/vuln-scan/: Cargo.toml
crates/vuln-scan/src/: main.rs
docs/: CHANGELOG.md  KNOWN_ISSUES.md  ONBOARDING.md  PUBLISHING.md  developer-guide.md  metrics-explained.md  quality-standards.md  user-guide.md  utcp-integration.md
docs/utcp/: codemetrics.json
examples/: .quality.toml  README.md
hermes/: SKILL.md
hermes/devops/codemetrics-analyzer/: SKILL.md
hermes/devops/codemetrics-explore/: SKILL.md
hermes/devops/codemetrics-http-debug-patterns/: SKILL.md
hermes/devops/codemetrics-observability-and-ops/: SKILL.md
hermes/devops/codemetrics-performance-optimization/: SKILL.md
hermes/devops/rust-codemetrics-analysis/: SKILL.md
hermes/software-development/agent-quality-workflow/: SKILL.md
hermes/software-development/codemetrics-workspace/: SKILL.md
schemas/: coupling-report.schema.json  debt-report.schema.json  doccov-report.schema.json  dup-report.schema.json  fuzz-report.schema.json  risk-report.schema.json  taint-report.schema.json  tool-response.schema.json
scripts/: benchmark.py  gen-coverage.sh  self_check.sh  test.sh
utcps/: quality-tools.json
