[package]
name = "ast-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared AST parsing for code quality tools -- cyclomatic complexity, coverage parsing"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = "1"
