[[bin]]
name = "codemetrics"
path = "src/main.rs"

[package]
name = "codemetrics-cli"
description = "Unified headless CLI for codemetrics -- one command, JSON output, exit codes for CI/agents"

[dependencies]
serde_json = "1"
colored = "2"
thiserror = { workspace = true }

[package.version]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[package.categories]
workspace = true

[package.keywords]
workspace = true

[dependencies.ast-parse-ts]
path = "../ast-parse-ts"
version = "1.0.0"

[dependencies.codemetrics-common]
path = "../codemetrics-common"
version = "1.0.0"

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.syn]
version = "2"
features = [ "full", "parsing", "visit",]

[dependencies.notify]
version = "6"
features = [ "macos_kqueue",]

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.jsonschema]
version = "0.29"
default-features = false
