[[bin]]
name = "cryptocheck"
path = "src/main.rs"

[package]
name = "crypto-check"
description = "Cryptography checker — detect weak hash algorithms, insecure random, hardcoded IVs, ECB mode"

[dependencies]
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[dependencies.codemetrics-common]
version = "1.0.0"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]
