[package]
name = "prop-cov"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scan for property-based test macros and calculate coverage metrics"

[[bin]]
name = "propcov"
path = "src/main.rs"

[dependencies]
quality-common = { path = "../quality-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
