[package]
name = "quality-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified headless CLI for code quality -- one command, JSON output, exit codes for CI/agents"

[[bin]]
name = "quality"
path = "src/main.rs"

[dependencies]
ast-parse = { path = "../ast-parse" }
ast-parse-ts = { path = "../ast-parse-ts" }
quality-common = { path = "../quality-common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
notify = { version = "6", features = ["macos_kqueue"] }
